RESOLVED FIXED273023
[WebGPU] CommandEncoder::copyTextureToTexture fails metal validation in some cases
https://bugs.webkit.org/show_bug.cgi?id=273023
Summary [WebGPU] CommandEncoder::copyTextureToTexture fails metal validation in some ...
Mike Wyrzykowski
Reported 2024-04-19 21:15:18 PDT
[WebGPU] CommandEncoder::copyTexturToTexture fails metal validation in some cases
Attachments
Mike Wyrzykowski
Comment 1 2024-04-19 21:15:38 PDT
Mike Wyrzykowski
Comment 2 2024-04-20 10:06:59 PDT
EWS
Comment 3 2024-04-23 09:10:33 PDT
Committed 277873@main (ffdff3e6b970): <https://commits.webkit.org/277873@main> Reviewed commits have been landed. Closing PR #27552 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.