[WebGPU] CommandEncoder::copyTexturToTexture fails metal validation in some cases https://bugs.webkit.org/show_bug.cgi?id=273023 <radar://126621339>

Reviewed by Tadeu Zagallo.

Don't allow source slice to be outside the texture range but
until its determined this should be a validation error according
to the specification, treat as a no-op.

* LayoutTests/TestExpectations:
* LayoutTests/fast/webgpu/fuzz-273023-expected.txt: Added.
* LayoutTests/fast/webgpu/fuzz-273023.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::copyTextureToTexture):

Canonical link: https://commits.webkit.org/277873@main